--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,10 +76,16 @@ button {
 button:hover {
 	background-color: var(--primary-color-mid);
 }
-
 button:disabled {
 	background-color: var(--primary-color-light);
 	border: 1px solid var(--primary-color);
+}
+
+button.warning {
+	background-color: hsl(0 100% 50%);
+}
+button.warning:hover {
+	background-color: hsl(15 100% 50%);
 }
 
 a.btn {
@@ -227,12 +233,18 @@ tr.spacer + tr td:last-child {
 	border-bottom-right-radius: var(--b-radius);
 }
 
+.alert {
+	width: fit-content;
+	padding-left: 1.4em;
+	padding-right: 1.4em;
+}
+
 footer {
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-top: 2em;
+	margin-top: 4em;
 	padding: 2em;
 	background-color: #555;
 }
